test/fail/enums_and_variants/enum_too_few_variants.lly
#[
SyntaxError: An enum must have at least two variants.
Where: File "enum_too_few_variants.lly" at line 8
]#

enum Option[A] {
	Some(A)
}
